--- a/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
@@ -24,12 +24,12 @@
                 </ul>   
 -->
             </div>
-            <div class="dummyHeader"></div>
+            <div class="dummyHeader">
                 <div class="pageWrapper"> 
                     <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
                         <h1>~ Cemetery Details ~</h1>
                         
-                        <input type="button" name="post" value="post" id="me">
+                        <!-- <input type="button" name="post" value="post" id="me"> -->
                         <h2>Cemetery Details</h2>
                         <table class="cemeteryDetails">
                             <tr><th> &nbsp; </th><th> &nbsp; </th></tr>
@@ -80,7 +80,7 @@
                                     '<tr><td>Location of Cemetery</td><td> ' + obj.location.locationOfCemetery + '</td>'+
                                     '<tr><td>Contact Name</td><td> ' + obj.location.contactName + '</td>'+
                                     '<tr><td>Contact Number</td><td> ' + obj.location.contactNumber + '</td>'+
-                                    '<tr><td><button class="goToDetails" text='+obj.id+' value='+obj.id+'>Random button?</button></td><td>&nbsp;'  + "</td></tr>"); 
+                                    '<tr><td></td><td>&nbsp;'  + "</td></tr>"); 
 
 	    }
 
