--- a/src/main/webapp/WEB-INF/views/publishedListings.html
+++ b/src/main/webapp/WEB-INF/views/publishedListings.html
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>  
+        <title>Start Page</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body class="siteWrapper">
+         <div class="pageHeader">
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
+                <ul class="navList"  style="width : 100%">
+                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
+                    <li><a href="#">Deceased Listings</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
+                   <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
+                </ul>   
+<!--
+                <ul class="socialListNav">
+                    <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/fbbtn.png" class="simpleLogo"></a></li>
+                    <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/instagrambtn.png" class="simpleLogo"></a></li>
+                    <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/tweetbtn.png" class="simpleLogo"></a></li>
+                </ul>   
+-->
+            </div>
+            <div class="dummyHeader"></div>
+                <div class="pageWrapper">        <!-- this is the beginning of site wrapper will contain the entire pages html -->       
+                    <div class="siteContent">  
+                        <table class="listings">
+                            <tr><th>Cemetery Name</th><th>Location - Country</th><th>Province / State</th><th>District / State</th><th>Town</th><th>Select Cemetery</th></tr>
+                            
+                        </table><!-- this is the beginning of site content will contain all the content --> 
+                        <!--<h1>Jquery Test</h1>
+                        <input type="button" name="post" value="post" id="me"> -->
+                    </div>
+                </div>
+        <!-- Script begins here -->
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+        
+        <script type="text/javascript">
+           console.log('hi');
+    	   
+    	   var countData = 0;
+               $.ajax({ // ajax call to retrieve all cemeteries json objects 
+                    type: "GET",
+                    url: "/CemeteryListingsWebApp/api/PublishedDeceasedListing/show",
+                    dataType: "json",
+                    success: function (data) {
+                        console.log('success');
+                        console.log(data);
+                        //console.log(data[0]['contactName']);
+                        countData = data.length;
+                        
+                     
+                        for(var i = 0; i < data.length; i++) 
+                        {
+                            var obj = data[i];
+                                console.log(obj.id);
+                                console.log(obj.location.country);
+                                console.log(obj.location.province_State);
+                                console.log(obj.location.district_state);
+                                console.log(obj.location.town);
+                                console.log(obj.location.cemeteryName);
+                                console.log(obj.location.locationOfCemetery);
+                                console.log(obj.contactName);
+                                console.log(obj.contactNumber);
+// building html objects here
+
+                                $(".listings").append(' <tr>' 
+                                        + '<td>' + obj.location.cemeteryName + '</td>'
+                                        + '<td>' + obj.location.country + '</td>'
+                                        + '<td>' + obj.location.province_State + '</td>'
+                                        + '<td>' + obj.location.district_state + '</td>'
+                                        + '<td>' + obj.location.town + '</td>'
+                                        + '<td> <button  class="goToDetails" text="details" value='+obj.id+'>View Cemetery</button>' + '</td>' + "</tr>");                             
+                        }
+
+                       
+
+        console.log($('li').size());
+
+        	$('button').click(function() {
+				var htmlString = $( this ).eq();	
+        		console.log(htmlString);
+        		console.log(htmlString.context.value);
+
+        		localStorage.cemeteryID = htmlString.context.value;
+    
+                        window.location="/CemeteryListingsWebApp/api/cemetery/cemetery";
+        	});
+
+                        
+                        //$(".data").append(data[0]['contactName']) + "hello";// write success in " "
+                    },
+
+                    error: function (jqXHR, status) {
+                        // error handler
+                        console.log(jqXHR);
+                        alert('fail' + status.code);
+                    }
+                 });
+		
+              var x = localStorage.username;
+
+                if($('.user') != null){
+                    if(x == ""){
+                        $('.user').text("Login");
+                    }else{
+
+                        $('.user').text(x);
+                    }
+                }
+        
+        </script>
     </body>
 </html>
