upload deceased listings and deceased listings details.

--- a/src/main/webapp/WEB-INF/views/publishedListingsDetails.html
+++ b/src/main/webapp/WEB-INF/views/publishedListingsDetails.html
@@ -23,7 +23,7 @@
     <div class="pageWrapper">
        
         <div class="siteContent">
-             <h1> Unpublished Listings Details </h1>
+             <h1> Published Listings Details </h1>
              <div class="details" style = "width : 100%; margin-left : 20%">
                  <form style="width:50%;" id="data">
                         <fieldset style="border:0">
