addded the create a new unpublished Deceased listing

--- a/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
@@ -24,7 +24,7 @@
                 </ul>   
 -->
             </div>
-            <div class="dummyHeader">
+            <div class="dummyHeader"></div>
                 <div class="pageWrapper"> 
                     <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
                         <h1>~ Cemetery Details ~</h1>
@@ -42,7 +42,7 @@
                         </table>
                     </div>
                 </div>
-            </div>
+            
         <!-- Script begins here -->
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
