--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -81,6 +81,10 @@
         console.log($('li').size());
 
         	$('button').click(function() {
+                    // checking whether the user is logged in over here
+                    if(localStorage.username == ""){
+                        window.location.href = "/CemeteryListingsWebApp/api/auth/login";
+                    }else{
 				var htmlString = $( this ).eq();	
         		console.log(htmlString);
         		console.log(htmlString.context.value);
@@ -88,6 +92,7 @@
         		localStorage.cemeteryID = htmlString.context.value;
     
                         window.location="/CemeteryListingsWebApp/api/cemetery/cemetery";
+                    }
         	});
 
                         
