--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -32,6 +32,7 @@
                             <label class="loginLabel" id="pwordLabel">Password (required)</label>
                             <input type="password" id="password" class="loginInput" name="cpassword">
                             <input type="button" id="sign-in" class="loginButton" value="Login">
+                            <input type="button" id="register" class="register" value="Register">
                		</form>
                    
                </div>
@@ -43,10 +44,15 @@
      <!--<script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script> -->
         
         <script type="text/javascript">
-        	console.log('hi');
+        	//console.log('hi');
+                
+                $('.register').click(function() {
+                    
+                    window.location.href = "/CemeteryListingsWebApp/api/auth/register";
+                });
 
         	$('.loginButton').click(function() {
-        		console.log('i have been clicked');
+        		//console.log('i have been clicked');
 
         	var username = $('#username').val();
         	var password = $('#password').val();
