update user, although does not seem to work. will play around with it tomorrow

--- a/src/main/webapp/WEB-INF/views/publishedListings.html
+++ b/src/main/webapp/WEB-INF/views/publishedListings.html
@@ -48,11 +48,11 @@
                 var login = localStorage.username;
 
                 if($('.user') != null){
-                    if(x == ""){
+                    if(login == ""){
                         $('.user').text("Login");
                     }else{
 
-                        $('.user').text(x);
+                        $('.user').text(login);
                     }
                 }
                 
