various design fixes

--- a/src/main/webapp/WEB-INF/views/contact.html
+++ b/src/main/webapp/WEB-INF/views/contact.html
@@ -17,19 +17,22 @@
                     <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
-                </ul>   
-        <!--
-                <ul class="socialListNav">
-                    <li><a href="#"><img src="resources/images/fbbtn.png" class="simpleLogo"></a></li>
-                    <li><a href="#"><img src="resources/images/instagrambtn.png" class="simpleLogo"></a></li>
-                    <li><a href="#"><img src="resources/images/tweetbtn.png" class="simpleLogo"></a></li>
-                </ul>   
--->
-               
+                </ul>  
     </div>
     <div class="dummyHeader">
        
     </div>
+    <div class="pageWrapper">
+        <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
+            <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
+                    <h1>Contact Us</h1>
+                    
+            </div>
+        </div>
+    </div>
+                      
+    
+   
    
 </body>
 </html>
