--- a/src/main/webapp/WEB-INF/views/newhtml1.html
+++ b/src/main/webapp/WEB-INF/views/newhtml1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-         
-        <title>Start Page</title>
+        <title>Cemetery Listings</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/index.css">
+         <link rel="icon"  type="image/png"  href="/CemeteryListingsWebApp/resources/images/favicon.ico">
     </head>
     <body>
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
