--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-         
-        <title>Start Page</title>
+    <head>         
+        <title>Cemetery Listings</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
         <script src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+         <link rel="icon"  type="image/png"  href="/CemeteryListingsWebApp/resources/images/favicon.ico">
     </head>
     
     <body class = siteWrapper>
         
         <div class="pageHeader">
-        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
+        <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList"  style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
